--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -22,6 +22,7 @@ add_executable(main
     src/model/model.cpp
     src/model/fields.cpp
     src/model/result_iterator.cpp
+    src/sql/helper.cpp
 )
 
 target_link_directories(main PRIVATE "${POSTGRESQL_LIB_DIR}")
@@ -46,7 +47,17 @@ FetchContent_MakeAvailable(googletest)
 enable_testing()
 
 # Add the test executable
-add_executable(tests tests/test_main.cpp)
+add_executable(tests
+    src/db/connection.cpp
+    src/db/settings.cpp
+    src/model/model.cpp
+    src/model/fields.cpp
+    src/model/result_iterator.cpp
+    src/sql/helper.cpp
+    # Explicetely files for tests
+    src/tests/db_management.cpp
+    src/tests/test_main.cpp
+)
 
 # Add the PostgreSQL library directory
 target_link_directories(tests PRIVATE "${POSTGRESQL_LIB_DIR}")
